# facial_reduction_for_gcs

./: README.md  pyproject.toml
gcs_facial_reduction/: facial_reduction.py  test_spp.py
notebooks/: fr_graphs.ipynb
tests/: test_facial_reduction.py
